appId: ${MAESTRO_APP_ID}
---
- tapOn:
    id: "login-change_server"
- takeScreenshot: build/maestro/200-ChangeServer
- tapOn: "Other"
- tapOn:
    id: "change_server-server"
- inputText: "chator-server.onrender.com"
- hideKeyboard
- extendedWaitUntil:
    visible: "chator-server.onrender.com"
    timeout: 10000
- tapOn: "chator-server.onrender.com"
